Optimize BSP server JVM flags and add analysis soft reference cache
JVM flags: add ReservedCodeCacheSize=512m (prevents JIT degradation),
UseStringDeduplication, UseCompactObjectHeaders (gated to JDK 25+),
HeapDumpOnOutOfMemoryError, ZGenerational. Benchmarks show 24% faster
compilation (429s avg vs 564s baseline for 3x3 concurrent builds).

ZincBridge: add global SoftReference cache for dependency analyses so
repeated loads of the same dependency across projects reuse cached
values. GC reclaims entries under memory pressure.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>